# qdrant-kafka-ingestor

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
scripts/py/: README.md  pyproject.toml
scripts/py/qki_kafka_producer/: producer.py
scripts/shell/: create_qdrant_collection.sh
src/: main.rs  models.rs
