[package]
name = "qdrant-kafka-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
qdrant-client = "1.7.0"
rand = "0.8.5"
rdkafka = { version = "0.36.2", features = ["cmake-build", "tokio"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum_macros = "0.26.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
